confusion matrix and k means plus pca

--- a/main.ipynb
+++ b/main.ipynb
@@ -395,6 +395,42 @@
     "    Ytestlabel = np.fromfile(f, dtype=np.dtype(np.uint8).newbyteorder('>'))\n",
     "    # print(data.shape) # (47040000,)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the original MNIST raw data, similar to how we read FashionMNIST\n",
+    "with open('data/MNIST/raw/train-images-idx3-ubyte','rb') as f:\n",
+    "    magic, size = struct.unpack(\">II\", f.read(8))\n",
+    "    nrows, ncols = struct.unpack(\">II\", f.read(8))\n",
+    "    data = np.fromfile(f, dtype=np.dtype(np.uint8).newbyteorder('>'))\n",
+    "    MNIST_Xtraindata = data.reshape((size, nrows*ncols))\n",
+    "\n",
+    "with open('data/MNIST/raw/train-labels-idx1-ubyte','rb') as f:\n",
+    "    magic, size = struct.unpack(\">II\", f.read(8))\n",
+    "    MNIST_Ylabeldata = np.fromfile(f, dtype=np.dtype(np.uint8).newbyteorder('>'))\n",
+    "\n",
+    "with open('data/MNIST/raw/t10k-images-idx3-ubyte','rb') as f:\n",
+    "    magic, size = struct.unpack(\">II\", f.read(8))\n",
+    "    nrows, ncols = struct.unpack(\">II\", f.read(8))\n",
+    "    data = np.fromfile(f, dtype=np.dtype(np.uint8).newbyteorder('>'))\n",
+    "    MNIST_Xtestdata = np.transpose(data.reshape((size, nrows*ncols)))\n",
+    "\n",
+    "with open('data/MNIST/raw/t10k-labels-idx1-ubyte','rb') as f:\n",
+    "    magic, size = struct.unpack(\">II\", f.read(8))\n",
+    "    MNIST_Ytestlabel = np.fromfile(f, dtype=np.dtype(np.uint8).newbyteorder('>'))\n",
+    "\n",
+    "# Create an image array similar to traindata_imgs\n",
+    "MNIST_traindata_imgs = np.transpose(MNIST_Xtraindata).reshape((60000,28,28))\n",
+    "\n",
+    "print(f\"MNIST Xtraindata shape: {MNIST_Xtraindata.shape}\")\n",
+    "print(f\"MNIST Ylabeldata shape: {MNIST_Ylabeldata.shape}\")\n",
+    "print(f\"MNIST Xtestdata shape: {MNIST_Xtestdata.shape}\")\n",
+    "print(f\"MNIST Ytestlabel shape: {MNIST_Ytestlabel.shape}\")"
+   ]
   }
  ],
  "metadata": {
