--- a/SROP.ipynb
+++ b/SROP.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -12,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -55,6 +57,21 @@
       },
       "execution_count": 1,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "oUd414IzcV1D"
+      },
+      "outputs": [],
+      "source": [
+        "# Automatically downloads if not present\n",
+        "FasionMNISTLoader = DataLoader(datasets.FashionMNIST(root='.', download=True, train=True,\n",
+        "                       transform=transforms.ToTensor()), batch_size=64, shuffle=True)\n",
+        "MNISTLoader = DataLoader(datasets.MNIST(root='.', download=True, train=True,\n",
+        "                       transform=transforms.ToTensor()), batch_size=64, shuffle=True)"
+      ]
     },
     {
       "cell_type": "code",
@@ -143,9 +160,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "08o3IboFfMkW",
-        "outputId": "80444bd2-4eaa-4751-a12c-4f2ec4478cbc"
+        "outputId": "2e0bbf9f-1a1e-41e3-8a92-3810c6f51008"
       },
-      "execution_count": 6,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,21 +176,6 @@
             "Test labels shape: (10000,)\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "id": "oUd414IzcV1D"
-      },
-      "outputs": [],
-      "source": [
-        "# Automatically downloads if not present\n",
-        "mnist = datasets.FashionMNIST(root='.', download=True, train=True,\n",
-        "                       transform=transforms.ToTensor())\n",
-        "\n",
-        "loader = DataLoader(mnist, batch_size=64, shuffle=True)\n"
       ]
     },
     {
@@ -196,9 +198,9 @@
           "height": 720
         },
         "id": "xMiZbcbSem5C",
-        "outputId": "12523c84-ee1e-4bda-e382-6618cc6830b0"
+        "outputId": "6f41c578-3aca-4cb7-e486-0a6f3a2ea9dc"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -236,9 +238,9 @@
           "height": 720
         },
         "id": "B5PMMNL2epcm",
-        "outputId": "c696eb29-453d-4f28-f1fe-a6e3b1a6c5e0"
+        "outputId": "ddb9e3bd-cb3b-4f86-fe38-5319738f5389"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,7 +266,7 @@
       "metadata": {
         "id": "5cFmA9_VereA"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -296,9 +298,9 @@
           "height": 244
         },
         "id": "oVJpwvsletq2",
-        "outputId": "680784f9-2ae7-417b-98a8-f0e09a55521c"
+        "outputId": "c9f7f106-6b8d-46f3-cc5a-e6febb601369"
       },
-      "execution_count": 11,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -331,7 +333,7 @@
       "metadata": {
         "id": "WLW_RvcDewZ4"
       },
-      "execution_count": 12,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -361,7 +363,7 @@
       "metadata": {
         "id": "P1lZQXYpex7S"
       },
-      "execution_count": 13,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -443,9 +445,9 @@
           "height": 860
         },
         "id": "1syBII1wezU2",
-        "outputId": "6e2e724d-9d7c-41ae-9da0-f7f54148875d"
+        "outputId": "c9e8eca4-33d4-4fd2-c0ca-fc95d5b4f2d9"
       },
-      "execution_count": 14,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -507,9 +509,9 @@
           "height": 553
         },
         "id": "fVy01Rate1ug",
-        "outputId": "8e27505d-3849-4747-8b17-7d21324e31cd"
+        "outputId": "1c2a6df6-7f19-45b4-a6bb-2e2a26141143"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
